--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.2.0"
     compile 'org.jetbrains.kotlin:kotlin-reflect:1.2.0'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.3'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:0.19.3'
 
     compile 'com.graphql-java:graphql-java:6.0'
 
@@ -30,21 +32,9 @@ dependencies {
     testRuntime 'org.jetbrains.spek:spek-junit-platform-engine:1.1.5'
 }
 
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
-}
+compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
+compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
+kotlin { experimental { coroutines "enable" } }
 
 junitPlatform {
     filters {
