--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
 
     testCompile "com.fasterxml.jackson.core:jackson-databind:2.9.2"
+    testCompile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2"
     testCompile 'org.assertj:assertj-core:3.8.0'
 
     testCompile 'org.jetbrains.spek:spek-api:1.1.5'
