--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testCompile "com.fasterxml.jackson.core:jackson-databind:2.9.2"
     testCompile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.2"
     testCompile 'org.assertj:assertj-core:3.8.0'
+    testCompile 'org.slf4j:slf4j-simple:1.7.7'
 
     testCompile 'org.jetbrains.spek:spek-api:1.1.5'
     testRuntime 'org.jetbrains.spek:spek-junit-platform-engine:1.1.5'
