--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           - v2-dependencies-
 
       # run tests!
-      - run: gradle test
+      - run: ./gradlew --no-daemon test
 
       - save_cache:
           paths:
