--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,9 @@ jobs:
       # run tests!
       - run: ./gradlew --no-daemon test
 
+      - store_test_results:
+          path: build/test-results
+
       - save_cache:
           paths:
             - ~/.gradle
