--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v3-dependencies-{{ checksum "build.gradle" }}
+          - v3-dependencies-{{ checksum "build.gradle.kts" }}
           # fallback to using the latest cache if no exact match is found
           - v3-dependencies-
 
@@ -40,5 +40,5 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle
-          key: v3-dependencies-{{ checksum "build.gradle" }}
+          key: v3-dependencies-{{ checksum "build.gradle.kts" }}
 
