--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,3 +47,11 @@ jobs:
             if [ "${CIRCLE_TAG}" != "" ]; then
               echo $CIRCLE_TAG
             fi
+  workflows:
+    version: 2
+    build-publish:
+      jobs:
+        - build:
+            filters:
+              tags:
+                only: /.*/
