--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           - v3-dependencies-
 
       # run tests!
-      - run: ./gradlew --no-daemon test
+      - run: ./gradlew test
 
       - store_test_results:
           path: build/test-results
@@ -45,7 +45,7 @@ jobs:
       - deploy:
           command: |
             if [ "${CIRCLE_TAG}" != "" ]; then
-              echo $CIRCLE_TAG
+              ./gradlew publish
             fi
 workflows:
   version: 2
