Smarter gradle build cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,9 +27,9 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v3-dependencies-{{ checksum "build.gradle.kts" }}
+          - v4-dependencies-{{ checksum "build.gradle.kts" }}
           # fallback to using the latest cache if no exact match is found
-          - v3-dependencies-
+          - v4-dependencies-
 
       - run:
           name: Build
@@ -40,8 +40,9 @@ jobs:
 
       - save_cache:
           paths:
-            - ~/.gradle
-          key: v3-dependencies-{{ checksum "build.gradle.kts" }}
+            - ~/.gradle/caches
+            - ~/.gradle/wrapper
+          key: v4-dependencies-{{ checksum "build.gradle.kts" }}
 
       - deploy:
           name: Publish (if tagged)
